--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,6 +7,7 @@
 @forward 'components/common/text';
 @forward 'components/layout/container';
 @forward 'components/layout/header';
+@forward 'components/ui/card-overview';
 @forward 'components/ui/card-statistic';
 @forward 'components/ui/nav';
 @forward 'components/ui/title';
