--- a/src/styles/utils/_lists.scss
+++ b/src/styles/utils/_lists.scss
@@ -10,6 +10,8 @@ $text-list: (
     "shared_link-arrow-underline" "Inter" semi-bold normal "neutral-100" 16px 16px,
     "shared_text-title-heading" "Inter" bold normal "neutral-100" 32px 80px,
     "shared_text-title-subheading" "Inter" semi-bold normal "neutral-100" 16px 32px,
+    "shared_text-title-heading-second-white" "Inter" semi-bold normal "neutral-10" 24px 56px,
+    "shared_text-title-subheading-small" "Inter" medium normal "neutral-60" 14px 18px,
     "shared_button-black" "Inter" semi-bold normal "neutral-10" 12px 16px,
     "home_text-main-image" "Inter" bold normal "neutral-100" 16px 20px,
     "home_input-main" "Inter" medium normal "neutral-100" 16px 18px,
@@ -18,7 +20,9 @@ $text-list: (
     "home_text-card-statistic-price" "Inter" bold normal "neutral-10" 16px 20px,
     "home_text-card-statistic-percent-up" "Inter" semi-bold normal "green-main" 11px 14px,
     "home_text-card-statistic-percent-down" "Inter" semi-bold normal "red-main" 11px 14px,
-    "home_text-card-statistic-period" "Inter" normal normal "neutral-60" 11px 11px
+    "home_text-card-statistic-period" "Inter" normal normal "neutral-60" 11px 11px,
+    "home_text-card-overview-name" "Inter" semi-bold normal "neutral-10" 18px 32px,
+    "home_text-card-overview-description" "Inter" normal normal "neutral-60" 14px 16px
 );
 
 $dynamic-text-list: (
