feat: add features

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,7 +7,9 @@
 @forward 'components/common/text';
 @forward 'components/layout/container';
 @forward 'components/layout/header';
+@forward 'components/ui/advantage';
 @forward 'components/ui/card-overview';
+@forward 'components/ui/card-sales-report';
 @forward 'components/ui/card-statistic';
 @forward 'components/ui/nav';
 @forward 'components/ui/title';
