--- a/src/styles/utils/_lists.scss
+++ b/src/styles/utils/_lists.scss
@@ -6,23 +6,30 @@
 @use 'functions.scss' as *;
 
 $text-list: (
-    "shared_link-nav-black" "Inter" medium normal "neutral-100" 16px 16px,
-    "shared_link-arrow-underline" "Inter" semi-bold normal "neutral-100" 16px 16px,
-    "shared_text-title-heading" "Inter" bold normal "neutral-100" 32px 80px,
-    "shared_text-title-subheading" "Inter" semi-bold normal "neutral-100" 16px 32px,
-    "shared_text-title-heading-second-white" "Inter" semi-bold normal "neutral-10" 24px 56px,
-    "shared_text-title-subheading-small" "Inter" medium normal "neutral-60" 14px 18px,
-    "shared_button-black" "Inter" semi-bold normal "neutral-10" 12px 16px,
-    "home_text-main-image" "Inter" bold normal "neutral-100" 16px 20px,
-    "home_input-main" "Inter" medium normal "neutral-100" 16px 18px,
-    "home_input-main-placeholder" "Inter" normal normal "neutral-60" 14px 16px,
-    "home_text-card-statistic-name" "Inter" semi-bold normal "neutral-50" 11px 14px,
-    "home_text-card-statistic-price" "Inter" bold normal "neutral-10" 16px 20px,
-    "home_text-card-statistic-percent-up" "Inter" semi-bold normal "green-main" 11px 14px,
-    "home_text-card-statistic-percent-down" "Inter" semi-bold normal "red-main" 11px 14px,
-    "home_text-card-statistic-period" "Inter" normal normal "neutral-60" 11px 11px,
-    "home_text-card-overview-name" "Inter" semi-bold normal "neutral-10" 18px 32px,
-    "home_text-card-overview-description" "Inter" normal normal "neutral-60" 14px 16px
+    "shared_link-nav-black" "Inter" medium normal "neutral-100" normal 16px 16px,
+    "shared_link-arrow-underline" "Inter" semi-bold normal "neutral-100" normal 16px 16px,
+    "shared_text-title-heading" "Inter" bold normal "neutral-100" normal 32px 80px,
+    "shared_text-title-subheading" "Inter" semi-bold normal "neutral-100" normal 16px 32px,
+    "shared_text-title-heading-second-black" "Inter" bold normal "neutral-100" normal 24px 56px,
+    "shared_text-title-heading-second-white" "Inter" semi-bold normal "neutral-10" normal 24px 56px,
+    "shared_text-title-subheading-small" "Inter" medium normal "neutral-60" 1.5 14px 18px,
+    "shared_button-black" "Inter" semi-bold normal "neutral-10" normal 12px 16px,
+    "home_text-main-image" "Inter" bold normal "neutral-100" normal 16px 20px,
+    "home_input-main" "Inter" medium normal "neutral-100" normal 16px 18px,
+    "home_input-main-placeholder" "Inter" medium normal "neutral-60" normal 14px 16px,
+    "home_text-card-sales-report-name" "Inter" semi-bold normal "neutral-50" normal 11px 14px,
+    "home_text-card-sales-report-price" "Inter" bold normal "neutral-10" normal 16px 20px,
+    "home_text-card-sales-report-percent-up" "Inter" semi-bold normal "green-main" normal 11px 14px,
+    "home_text-card-sales-report-percent-down" "Inter" semi-bold normal "red-main" normal 11px 14px,
+    "home_text-card-sales-report-period" "Inter" medium normal "neutral-60" normal 11px 11px,
+    "home_text-card-overview-name" "Inter" semi-bold normal "neutral-10" normal 18px 32px,
+    "home_text-card-overview-description" "Inter" medium normal "neutral-60" normal 14px 16px,
+    "home_text-statistic-heading" "Inter" medium normal "neutral-100" normal 10px 16px,
+    "home_text-card-statistic-name" "Inter" medium normal "neutral-60" normal 6px 10px,
+    "home_text-card-statistic-price" "Inter" bold normal "neutral-100" normal 14px 24px,
+    "home_text-card-statistic-percent" "Inter" medium normal "neutral-100" normal 6px 10px,
+    "home_text-card-statistic-description" "Inter" regular normal "neutral-60" normal 5px 8px,
+    "home_text-advantage-description" "Inter" medium normal "neutral-100" 1.5 14px 18px
 );
 
 $dynamic-text-list: (
