--- a/src/styles/utils/_lists.scss
+++ b/src/styles/utils/_lists.scss
@@ -9,7 +9,7 @@ $text-list: (
     "shared_link-nav-black" "Inter" medium normal "neutral-100" normal 16px 16px,
     "shared_link-arrow-underline" "Inter" semi-bold normal "neutral-100" normal 16px 16px,
     "shared_text-title-heading" "Inter" bold normal "neutral-100" normal 32px 80px,
-    "shared_text-title-subheading" "Inter" semi-bold normal "neutral-100" normal 16px 32px,
+    "shared_text-title-subheading" "Inter" semi-bold normal "neutral-100" 1.5 16px 32px,
     "shared_text-title-heading-second-black" "Inter" bold normal "neutral-100" normal 24px 56px,
     "shared_text-title-heading-second-white" "Inter" semi-bold normal "neutral-10" normal 24px 56px,
     "shared_text-title-subheading-small" "Inter" medium normal "neutral-60" 1.5 14px 18px,
