feat: add growth

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -12,5 +12,6 @@
 @forward 'components/ui/card-sales-report';
 @forward 'components/ui/card-statistic';
 @forward 'components/ui/nav';
+@forward 'components/ui/result';
 @forward 'components/ui/title';
 @forward 'pages/home';
