--- a/src/styles/components/common/_text.scss
+++ b/src/styles/components/common/_text.scss
@@ -58,4 +58,10 @@
     &-advantage-description {
         @extend %home_text-advantage-description;
     }
+    &-result-number {
+        @extend %home_text-result-number;
+    }
+    &-result-description {
+        @extend %home_text-result-description;
+    }
 }
