feat: add database

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,7 @@
 @forward 'base/font';
 @forward 'base/reset';
 @forward 'base/common';
+@forward 'special/swal';
 @forward 'components/common/buttons';
 @forward 'components/common/input';
 @forward 'components/common/link';
