--- a/src/styles/utils/_templates.scss
+++ b/src/styles/utils/_templates.scss
@@ -75,3 +75,8 @@
   background-color: color(neutral-100);
   border-radius: 100px;
 }
+
+%swal_confirm-button {
+  background-color: color(neutral-100);
+  border-radius: 100px;
+}
