feat: add sponsors

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -8,6 +8,7 @@
 @forward 'components/common/text';
 @forward 'components/layout/container';
 @forward 'components/layout/header';
+@forward 'components/sections/section-sponsor';
 @forward 'components/ui/advantage';
 @forward 'components/ui/card-overview';
 @forward 'components/ui/card-sales-report';
