feat: add benefits

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -10,6 +10,7 @@
 @forward 'components/layout/header';
 @forward 'components/sections/section-sponsor';
 @forward 'components/ui/advantage';
+@forward 'components/ui/card-benefit';
 @forward 'components/ui/card-overview';
 @forward 'components/ui/card-sales-report';
 @forward 'components/ui/card-statistic';
