--- a/src/styles/components/common/_text.scss
+++ b/src/styles/components/common/_text.scss
@@ -64,4 +64,10 @@
     &-result-description {
         @extend %home_text-result-description;
     }
+    &-card-benefit-description-heading {
+        @extend %home_text-card-benefit-description-heading;
+    }
+    &-card-benefit-description-text {
+        @extend %home_text-card-benefit-description-text;
+    }
 }
