--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -11,10 +11,12 @@
 @forward 'components/sections/section-sponsor';
 @forward 'components/ui/advantage';
 @forward 'components/ui/card-benefit';
+@forward 'components/ui/card-news';
 @forward 'components/ui/card-overview';
 @forward 'components/ui/card-sales-report';
 @forward 'components/ui/card-statistic';
 @forward 'components/ui/nav';
 @forward 'components/ui/result';
+@forward 'components/ui/slider';
 @forward 'components/ui/title';
 @forward 'pages/home';
