--- a/src/styles/utils/_lists.scss
+++ b/src/styles/utils/_lists.scss
@@ -36,7 +36,9 @@ $text-list: (
     "home_text-result-number" "Inter" semi-bold normal "neutral-100" normal 32px 56px,
     "home_text-result-description" "Inter" medium normal "neutral-60" normal 16px 18px,
     "home_text-card-benefit-description-heading" "Inter" semi-bold normal "neutral-100" normal 16px 32px,
-    "home_text-card-benefit-description-text" "Inter" medium normal "neutral-60" normal 14px 16px
+    "home_text-card-benefit-description-text" "Inter" medium normal "neutral-60" normal 14px 16px,
+    "home_text-card-news-name" "Inter" semi-bold normal "neutral-100" normal 16px 32px,
+    "home_text-card-news-description" "Inter" regular normal "neutral-60" normal 12px 14px,
 );
 
 $dynamic-text-list: (
